--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -12,8 +12,7 @@
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers">
-        <code class="prism language-bash" data-prism>
-            npm install -g appwrite-cli
+        <code class="prism language-bash" data-prism>npm install -g appwrite-cli
         </code>
     </pre>
 </div>
