feat: review comments

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -11,10 +11,7 @@
 <p>If you have npm set up, run the command below to install the CLI</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers">
-        <code class="prism language-bash" data-prism>npm install -g appwrite-cli
-        </code>
-    </pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>npm install -g appwrite-cli</code></pre>
 </div>
 
 
