feat: review comments

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -64,12 +64,12 @@
 
 <p>The following prompts guide you through the setup process. The init command also creates an appwrite.json file representing your Appwrite project. The `appwrite.json` file does the following things. </p>
 
-<ul>
-    <li>Provides context to the CLI</li>
-    <li>Keeps track of all your cloud functions</li>
-    <li>Keeps track of all your project's collections</li>
-    <li>Helps you deploy your Appwrite project to production and more</li>
-</ul>
+<ol class="margin-top margin-bottom-large">
+  <li class="margin-bottom-small">Provides context to the CLI</li>
+  <li class="margin-bottom-small">Keeps track of all your cloud functions</li>
+  <li class="margin-bottom-small">Keeps track of all your project's collections</li>
+  <li class="margin-bottom-small">Helps you deploy your Appwrite project to production and more</li>
+</ol>
 
 <p>You can also fetch all the collections in your current project using</p>
 
