feat: allow quotes in regex

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -100,8 +100,7 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function
 ? Which functions would you like to deploy? Awesome Function (621229798628cf5bf712)
 ℹ Info Deploying function Awesome Function ( 621229798628cf5bf712 )
-✓ Success Deployed Awesome Function ( 621229798628cf5bf712 )
-    </code></pre>
+✓ Success Deployed Awesome Function ( 621229798628cf5bf712 )</code></pre>
 </div>
 
 <h3><a href="/docs/command-line#deployCollections" id="deployCollections">Deploying collections</a></h3>
