--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -66,7 +66,7 @@
 
 <ol class="margin-top margin-bottom-large">
   <li class="margin-bottom-small">Provides context to the CLI</li>
-  <li class="margin-bottom-small">Keeps track of all your cloud functions</li>
+  <li class="margin-bottom-small">Keeps track of all your Cloud Functions</li>
   <li class="margin-bottom-small">Keeps track of all your project's collections</li>
   <li class="margin-bottom-small">Helps you deploy your Appwrite project to production and more</li>
 </ol>
@@ -83,9 +83,9 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init --all</code></pre>
 </div>
 
-<h3><a href="/docs/command-line#deployFunctions" id="deployFunctions">Deploying cloud functions</a></h3>
+<h3><a href="/docs/command-line#deployFunctions" id="deployFunctions">Deploying Cloud Functions</a></h3>
 
-<p>The CLI also handles the creation and deployment of Appwrite's cloud functions. You can initialize a new function using</p>
+<p>The CLI also handles the creation and deployment of Appwrite's Cloud Functions. You can initialize a new function using</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init function
