fix: review comments

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -125,7 +125,7 @@
 </div>
 </div>
 
-<h3><a href="/docs/command-line#usageExamples" id="usageExamples">Usage Examples</a></h3>
+<h3><a href="/docs/command-line#usageExamples" id="usageExamples">Usage examples</a></h3>
 
 <p>The Appwrite CLI follows the following general syntax.</p>
 
