fix: review comments

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -4,7 +4,7 @@
 
 <p>The CLI is packaged both as an <a href="https://www.npmjs.com/package/appwrite-cli">npm module</a> as well as a <a href="https://github.com/appwrite/sdk-for-node-cli/releases/latest">standalone binary</a> for your operating system, making it completely dependency free, platform independent and language agnostic.</p>
 
-<h3><a href="/docs/command-line#installWithNpm" id="installWithNpm">Install with npm</a></h3>
+<h3><a href="/docs/command-line#installWithNpm" id="installWithNpm">Install with NPM</a></h3>
 
 <p>If you have npm set up, run the command below to install the CLI</p>
 
@@ -13,7 +13,7 @@
 </div>
 
 
-<h3><a href="/docs/command-line#installWithScript" id="installWithScript">Install with script</a></h3>
+<h3><a href="/docs/command-line#installWithScript" id="installWithScript">Install with Script</a></h3>
 
 <p>For a completely dependency-free installation, the CLI also ships with a convenient installation script for your operating system</p>
 
@@ -54,7 +54,7 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite login</code></pre>
 </div>
 
-<h3><a href="/docs/command-line#initializeProject" id="initializeProject">Initializing your project</a></h3>
+<h3><a href="/docs/command-line#initializeProject" id="initializeProject">Initializing Your Project</a></h3>
 
 <p>After you're logged in, the CLI needs to be initialized with your Appwrite project. You can initialize the CLI using:</p>
 
@@ -118,7 +118,7 @@
 </div>
 </div>
 
-<h3><a href="/docs/command-line#appwriteJSON" id="appwriteJSON">The appwrite.json file</a></h3>
+<h3><a href="/docs/command-line#appwriteJSON" id="appwriteJSON">The appwrite.json File</a></h3>
 
 <p>An <b>appwrite.json</b> file is created by the CLI when you initialize your project. It stores all the configuration for the CLI to be able to interact with your Appwrite project. The file has a structure as depicted below. When using the <b>appwrite deploy</b> command, the CLI uses information from <b>appwrite.json</b> to deploy your functions and collections.</p>
 
@@ -163,7 +163,7 @@
   <li class="margin-bottom-small">Helps you deploy your Appwrite project to production and more</li>
 </ol>
 
-<h3><a href="/docs/command-line#usageExamples" id="usageExamples">Usage examples</a></h3>
+<h3><a href="/docs/command-line#usageExamples" id="usageExamples">Usage Examples</a></h3>
 
 <p>The Appwrite CLI follows the following general syntax.</p>
 
