--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -19,6 +19,18 @@
 
 <ul class="phases clear" data-ui-phases>
     <li>
+        <h4><a href="https://brew.sh" target="_blank">Homebrew</a> on MacOS</h4>
+        <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
+            <pre class="line-numbers">
+              <code class="prism language-bash" data-prism>
+              $ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
+              $ brew update
+              $ brew install --HEAD appwrite 
+              </code>
+            </pre>
+        </div>
+    </li>
+    <li>
         <h4>MacOS</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
             <pre class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
