Removed little display test

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -31,7 +31,7 @@
         </div>
     </li>
     <li>
-        <h4>MacOOOOS</h4>
+        <h4>MacOS</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
             <pre class="line-numbers"><code class="prism language-bash" data-prism>curl -sL <?php echo $this->getParam('home'); ?>/cli/install.sh | bash</code></pre>
         </div>
