--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -22,11 +22,9 @@
         <h4><a href="https://brew.sh" target="_blank">Homebrew</a> on MacOS</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
             <pre class="line-numbers">
-              <code class="prism language-bash" data-prism>
-              $ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
+              <code class="prism language-bash" data-prism>$ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
               $ brew update
-              $ brew install --HEAD appwrite 
-              </code>
+              $ brew install --HEAD appwrite</code>
             </pre>
         </div>
     </li>
