--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -19,13 +19,12 @@
 
 <ul class="phases clear" data-ui-phases>
     <li>
-        <h4><a href="https://brew.sh" target="_blank">Homebrew</a> on MacOS</h4>
+        <h4>Homebrew on MacOS</h4>
+        <p>More information on <a href="https://brew.sh" target="_blank">Homebrew</a></p>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers">
-              <code class="prism language-bash" data-prism>$ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>$ brew tap appwrite/sdk-for-node-cli https://github.com/appwrite/sdk-for-node-cli
               $ brew update
-              $ brew install --HEAD appwrite</code>
-            </pre>
+              $ brew install --HEAD appwrite</code></pre>
         </div>
     </li>
     <li>
